--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -70,7 +70,7 @@
       <hr/>
       <small>
         <img src="//licensebuttons.net/p/zero/1.0/80x15.png" style="border-style: none;" alt="CC0" />
-        This content is dedicated to the public domain. See the <a href='{{site.baseurl}}license.html'>license</a> for details. You can <a href='https://github.com/openpolitics/manifesto/blame/gh-pages/{{page.path}}'>see all page changes</a> on GitHub. <a href='{{site.baseurl}}contributing.html'>Contributions</a> are welcome!
+        This content is dedicated to the public domain. See the <a href='{{site.baseurl}}license.html'>license</a> for details. <a href='{{site.baseurl}}contributing.html'>Contributions</a> are welcome!
       </small>
     </footer>
 
