--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -38,7 +38,7 @@
               <li> <a href='{{site.baseurl}}manifesto/index.html'>Introduction</a></li>
               {% assign sorted_pages = site.pages | sort:"title" %}
               {% for page in sorted_pages %}
-                {% if page.layout == "policy" %}
+                {% if page.layout == 'manifesto_policy' or page.layout == 'manifesto_local_index' %}
                   <li> <a href='{{page.url}}'>{{ page.title }}</a></li>
                 {% endif %}
               {% endfor %}
