--- a/_layouts/manifesto_policy.html
+++ b/_layouts/manifesto_policy.html
@@ -11,7 +11,7 @@ layout: main
 
   {% assign sorted_pages = site.pages | sort:"title" %}
   {% for p in sorted_pages %}
-    {% if p.layout == 'policy' %}
+    {% if p.layout == 'manifesto_policy' or p.layout == 'manifesto_local_index' %}
       {% assign previous_page = this_page %}
       {% assign this_page = p %}
       {% if p.title == page.title %}
@@ -21,7 +21,7 @@ layout: main
     {% endif %}
   {% endfor%}
   {% for p in sorted_pages offset:this_page_index %}
-    {% if p.layout == 'policy' %}
+    {% if p.layout == 'manifesto_policy' or p.layout == 'manifesto_local_index' %}
       {% assign next_page = p %}
       {% break %}
     {% endif %}
