--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -44,8 +44,7 @@
               {% endfor %}
             </ul>
           </li>
-          <li><a href="http://votebot.openpolitics.org.uk">Votes</a></li>
-          <li><a href="{{site.baseurl}}candidates.html">Candidates</a></li>
+          <li><a href="http://votebot.openpolitics.org.uk">Proposals</a></li>
           <li><a href="{{site.baseurl}}contributing.html">How to Contribute</a></li>
         </ul>
         {% if page.editable != false %}
