--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -48,7 +48,7 @@
           <li><a href="{{site.baseurl}}contributing.html">How to Contribute</a></li>
         </ul>
         {% if page.editable != false %}
-          <a href="https://githubeditor.herokuapp.com/openpolitics/manifesto/blob/master/{{page.path | replace: 'manifesto/', ''}}" class='btn btn-primary navbar-btn pull-right'>
+          <a href="https://votebot.openpolitics.org.uk/edit/master/{{page.path | replace: 'manifesto/', ''}}" class='btn btn-primary navbar-btn pull-right'>
             Suggest a change
             <i class="fa fa-pencil"></i>
           </a>
