Generate TOCs with javascript in layout, not in markdown

--- a/_layouts/manifesto_policy.html
+++ b/_layouts/manifesto_policy.html
@@ -5,6 +5,12 @@ layout: main
 {% include header.html %}
 
 <div class="container">
+  
+  <nav role='navigation'>
+    <ul id='toc'>
+    </ul>
+  </nav>
+  
   <div class="policy">
     {{content}}
   </div>
@@ -42,6 +48,17 @@ layout: main
       </a></li>
     {% endif %}  
   </ul>
+
+  <script>
+    headings = document.getElementsByTagName("h2")
+    for (i in headings) {
+      heading = headings[i];
+      if (heading.id) {
+        li = "<li><a href='#" + heading.id + "'>" + heading.textContent + "</a></li>";
+        document.getElementById("toc").innerHTML += li;
+      }
+    }
+  </script>
   
 </div>
 
