Shift a little to mention platform separately from the manifesto

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -7,7 +7,8 @@ layout: main
     <h1>The OpenPolitics Project</h1>
     <p>{{site.tagline}}</p>
     <p>
-      <a href='manifesto' class='btn btn-primary btn-lg'>Help write the Manifesto</a>
+      <a href='manifesto' class='btn btn-default btn-lg'>Help write the manifesto</a>
+      <a href='https://github.com/openpolitics/votebot' class='btn btn-default btn-lg'>Use our software to make your own</a>
     </p>
     <div class='attribution'>
       <a href='https://www.flickr.com/photos/opensourceway/4371001268'>"What if politicians innovated the open source way?" by opensource.com</a>
