--- a/_layouts/manifesto.html
+++ b/_layouts/manifesto.html
@@ -11,13 +11,26 @@ layout: root
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="{{site.baseurl}}index.html">
-        <img src='/images/logo64_inverted.png' alt='logo' height='20' style='vertical-align: text-bottom'/>&nbsp;{{site.name}}
+        <img src='/images/logo64_inverted.png' alt='logo' height='20' style='vertical-align: text-bottom'/>&nbsp;The OpenPolitics Manifesto
       </a>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="/manifesto">Manifesto</a></li>
-        <li><a href="https://github.com/openpolitics/votebot">Software</a></li>
+        <li class='dropdown'>
+          <a class='dropdown-toggle' data-toggle='dropdown' href="/manifesto/index.html">Sections <span class='caret'></span></a>
+          <ul class='dropdown-menu'>
+            <li> <a href='/manifesto/index.html'>Introduction</a></li>
+            {% assign sorted_pages = site.pages | sort:"title" %}
+            {% for page in sorted_pages %}
+              {% if page.layout == 'manifesto_policy' or page.layout == 'manifesto_local_index' %}
+                <li> <a href='{{page.url}}'>{{ page.title }}</a></li>
+              {% endif %}
+            {% endfor %}
+          </ul>
+        </li>
+        <li><a href="https://votebot.openpolitics.org.uk/proposals">Proposals</a></li>
+        <li><a href="https://votebot.openpolitics.org.uk/ideas">Ideas</a></li>
+        <li><a href="{{site.baseurl}}contributing.html">How to Contribute</a></li>
       </ul>
       {% if page.editable != false %}
         <a href="https://votebot.openpolitics.org.uk/edit/master/{{page.path | replace: 'manifesto/', ''}}" class='btn btn-primary navbar-btn pull-right'>
