link contributing guide in manifesto path instead

--- a/_layouts/manifesto.html
+++ b/_layouts/manifesto.html
@@ -29,7 +29,7 @@ layout: root
         </li>
         <li><a href="https://votebot.openpolitics.org.uk/proposals">Proposals</a></li>
         <li><a href="https://votebot.openpolitics.org.uk/ideas">Ideas</a></li>
-        <li><a href="{{site.baseurl}}contributing.html">How to Contribute</a></li>
+        <li><a href="{{site.baseurl}}manifesto/contributing.html">How to Contribute</a></li>
       </ul>
       {% if page.editable != false %}
         <a href="https://votebot.openpolitics.org.uk/edit/master/{{page.path | replace: 'manifesto/', ''}}" class='btn btn-primary navbar-btn pull-right'>
