--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -25,7 +25,7 @@
       <hr/>
       <small>
         <img src="//licensebuttons.net/p/zero/1.0/80x15.png" style="border-style: none;" alt="CC0" />
-        This content is dedicated to the public domain. See the <a href='{{site.baseurl}}license.html'>license</a> for details. <a href='{{site.baseurl}}contributing.html'>Contributions</a> are welcome!
+        This content is dedicated to the public domain. See the <a href='{{site.baseurl}}license.html'>license</a> for details. <a href='{{site.baseurl}}manifesto/contributing.html'>Contributions</a> are welcome!
       </small>
     </footer>
 
