--- a/_layouts/manifesto_index.html
+++ b/_layouts/manifesto_index.html
@@ -5,6 +5,33 @@ layout: manifesto
 {% include header.html %}
 
 <div class="container">
+
+  <div class='well pull-right'>
+    <p>
+      <a href='https://leanpub.com/openpolitics-manifesto' class='btn btn-default btn-block'>
+        <i class='fa fa-book'></i>
+        Download ebook
+      </a>
+    </p>
+    <div class='row' style='text-align: center'>
+      <div class='col-xs-4'>
+        <i class='fa fa-laptop'></i>
+        <br/>
+        PDF
+      </div>
+      <div class='col-xs-4'>
+        <i class='fa fa-mobile'></i> <i class='fa fa-tablet'></i>
+        <br/>
+        EPUB
+      </div>
+      <div class='col-xs-4'>
+        <i class='fa fa-tablet'></i>
+        <br/>
+        MOBI
+      </div>
+    </div>
+  </div>
+
   {{content}}    
 
   <hr/>
