--- a/_layouts/manifesto_policy.html
+++ b/_layouts/manifesto_policy.html
@@ -51,7 +51,7 @@ layout: manifesto
 
   <script>
     headings = document.getElementsByTagName("h2")
-    for (i in headings) {
+    for (var i=0; i<headings.length; i++) {
       heading = headings[i];
       if (heading.id) {
         li = "<li><a href='#" + heading.id + "'>" + heading.textContent + "</a></li>";
