--- a/_layouts/manifesto_local_policy.html
+++ b/_layouts/manifesto_local_policy.html
@@ -15,7 +15,7 @@ layout: manifesto
   </div>
 
   <ul class='pager'>
-    <li class='previous'><a href='{{site.baseurl}}manifesto'>
+    <li class='previous'><a href='/manifesto'>
       <i class="fa fa-arrow-left"></i>
       Back to the main manifesto
     </a></li>
