--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -6,9 +6,9 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-  <link href="{{site.baseurl}}css/main.css" rel="stylesheet">
-  <link href="{{site.baseurl}}css/home.css" rel="stylesheet">
-  <link href="{{site.baseurl}}css/policy.css" rel="stylesheet">
+  <link href="/css/main.css" rel="stylesheet">
+  <link href="/css/home.css" rel="stylesheet">
+  <link href="/css/policy.css" rel="stylesheet">
   <link rel='icon' href='/images/logo64.png' sizes="64x64" type="image/png">
   <style>
     body {
@@ -25,7 +25,7 @@
       <hr/>
       <small>
         <img src="//licensebuttons.net/p/zero/1.0/80x15.png" style="border-style: none;" alt="CC0" />
-        This content is dedicated to the public domain. See the <a href='{{site.baseurl}}license.html'>license</a> for details. <a href='{{site.baseurl}}manifesto/contributing.html'>Contributions</a> are welcome!
+        This content is dedicated to the public domain. See the <a href='/license.html'>license</a> for details. <a href='/manifesto/contributing.html'>Contributions</a> are welcome!
       </small>
     </footer>
 
