--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -10,7 +10,7 @@ layout: root
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{{site.baseurl}}index.html">
+      <a class="navbar-brand" href="index.html">
         <img src='/images/logo64_inverted.png' alt='logo' height='20' style='vertical-align: text-bottom'/>&nbsp;{{site.name}}
       </a>
     </div>
