update license buttons to use https

--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -24,7 +24,7 @@
     <footer>
       <hr/>
       <small>
-        <img src="//licensebuttons.net/p/zero/1.0/80x15.png" style="border-style: none;" alt="CC0" />
+        <img src="https://licensebuttons.net/p/zero/1.0/80x15.png" style="border-style: none;" alt="CC0" />
         This content is dedicated to the public domain. See the <a href='/license.html'>license</a> for details. <a href='/manifesto/contributing.html'>Contributions</a> are welcome!
       </small>
     </footer>
