--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -34,5 +34,7 @@
   <script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
+  <script src="https://assets.digitalclimatestrike.net/widget.js" async></script>
+  
 </body>
 </html>
